Fix images overflowing from marker details

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -84,6 +84,13 @@ output[form="search-form"]>ul>li>button:hover {
 	background-color: #8884;
 }
 
+article>p {
+	width: 100%;
+}
+article>p img {
+	max-width: 100%;
+}
+
 .leaflet-sidebar-tabs>li.disabled,
 .leaflet-sidebar-tabs>ul>li.disabled {
 	opacity: .25;
